--- a/css/ownglyphjoneulbo.css
+++ b/css/ownglyphjoneulbo.css
@@ -4,7 +4,9 @@ html, body {text-align:center}
 .wrap {font-size: 16px; font-weight: bold;}
 
 @font-face {
-	font-family: "Ownglyph Joneulbo", Regular;
+	font-family: 'Ownglyph Joneulbo', Regular;
+	font-weight: normal;
+	font-style: normal;
 	font-display: swap;
 	src: local('Ownglyph Joneulbo Regular')	     
 	     url('ownglyphjoneulbo/ownglyphjoneulbo.eot') format('embedded-opentype'),
