--- a/css/ownglyphjoneulbo.css
+++ b/css/ownglyphjoneulbo.css
@@ -1,11 +1,11 @@
 html, body {text-align:center}
-.main {font-size:30PX;}
-.sub {font-size: 25px;}
-.wrap {font-size: 16px; font-weight: bold;}
+.main {font-size:30PX; font-weight: normal;}
+.sub {font-size: 25px; font-weight: normal;}
+.wrap {font-size: 16px; font-weight: normal;}
 
 @font-face {
 	font-family: 'Ownglyph Joneulbo', Regular;
-	font-weight: normal;
+	font-weight: normal
 	font-style: normal;
 	font-display: swap;
 	src: local('Ownglyph Joneulbo Regular')	     
